Add PoC for Java 14 records support